whitespace fix with favourites text now showing

--- a/app/assets/stylesheets/pages/user_profile.scss
+++ b/app/assets/stylesheets/pages/user_profile.scss
@@ -43,6 +43,7 @@
 .favorites {
   position: absolute;
   top: 269px;
+  height: 25%;
 }
 
 .favorites_title h2 {
